--- a/canvas/package.json
+++ b/canvas/package.json
@@ -7,10 +7,12 @@
 		"lint": "turbo run lint",
 		"check": "biome check --write .",
 		"format": "biome format --write .",
-		"check-types": "turbo run check-types"
+		"check-types": "turbo run check-types",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"husky": "^9.1.7",
 		"prettier": "^3.7.4",
 		"turbo": "^2.7.3",
 		"typescript": "5.9.2"
