--- a/canvas/apps/http-backend/package.json
+++ b/canvas/apps/http-backend/package.json
@@ -4,10 +4,17 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc -b",
+		"start": "node ./dist/index.js",
+		"dev": "npm run build && npm run start"
 	},
 	"dependencies": {
-		"@repo/typescript-config": "workspace:*"
+		"express": "^5.2.1"
+	},
+	"devDependencies": {
+		"@repo/typescript-config": "workspace:*",
+		"@types/express": "^5.0.6"
 	},
 	"keywords": [],
 	"author": "",
