--- a/canvas/apps/http-backend/package.json
+++ b/canvas/apps/http-backend/package.json
@@ -10,11 +10,19 @@
 		"dev": "npm run build && npm run start"
 	},
 	"dependencies": {
-		"express": "^5.2.1"
+		"@types/cors": "^2.8.19",
+		"cors": "^2.8.5",
+		"dotenv": "^17.2.3",
+		"express": "^5.2.1",
+		"http-status-codes": "^2.3.0",
+		"zod": "^4.3.5"
 	},
 	"devDependencies": {
+		"@repo/http-core": "workspace:*",
+		"@repo/supabase": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
-		"@types/express": "^5.0.6"
+		"@types/express": "^5.0.6",
+		"tsx": "^4.21.0"
 	},
 	"keywords": [],
 	"author": "",
