feat: update package dependencies and improve code formatting across multiple files

--- a/canvas/apps/http-backend/package.json
+++ b/canvas/apps/http-backend/package.json
@@ -21,6 +21,7 @@
 		"@repo/http-core": "workspace:*",
 		"@repo/supabase": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
+		"@supabase/supabase-js": "^2.90.1",
 		"@types/express": "^5.0.6",
 		"tsx": "^4.21.0"
 	},
