feat: add workspace dependencies for common and config packages, update package manager version

--- a/canvas/apps/http-backend/package.json
+++ b/canvas/apps/http-backend/package.json
@@ -21,7 +21,9 @@
 		"@repo/http-core": "workspace:*",
 		"@repo/supabase": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
+		"@repo/config": "workspace:*",
 		"@supabase/supabase-js": "^2.90.1",
+		"@repo/common": "workspace:*",
 		"@types/express": "^5.0.6",
 		"tsx": "^4.21.0"
 	},
