--- a/canvas/packages/supabase/package.json
+++ b/canvas/packages/supabase/package.json
@@ -12,7 +12,8 @@
 	},
 	"scripts": {
 		"build": "tsc -b",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"update-types": "npx supabase gen types typescript --project-id \"khajsxndtqzfkdnpwqdk\" --schema public > src/types.ts"
 	},
 	"keywords": [],
 	"author": "",
