feat: Initial implementation of Yjs sync engine with Konva

--- a/canvas/apps/web/package.json
+++ b/canvas/apps/web/package.json
@@ -12,9 +12,15 @@
 	},
 	"dependencies": {
 		"@repo/ui": "workspace:*",
+		"@types/uuid": "^11.0.0",
+		"konva": "^10.0.12",
 		"next": "16.1.0",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"react-konva": "^19.2.1",
+		"uuid": "^13.0.0",
+		"y-websocket": "^3.0.0",
+		"yjs": "^13.6.29"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "workspace:*",
