--- a/canvas/apps/ws-backend/package.json
+++ b/canvas/apps/ws-backend/package.json
@@ -10,7 +10,9 @@
 		"dev": "npm run build && npm run start"
 	},
 	"dependencies": {
-		"ws": "^8.19.0"
+		"ws": "^8.19.0",
+		"y-websocket": "^3.0.0",
+		"yjs": "^13.6.29"
 	},
 	"devDependencies": {
 		"@repo/typescript-config": "workspace:*",
