--- a/canvas/apps/ws-backend/package.json
+++ b/canvas/apps/ws-backend/package.json
@@ -11,7 +11,7 @@
 	},
 	"dependencies": {
 		"ws": "^8.19.0",
-		"y-websocket": "^3.0.0",
+		"y-websocket": "1.5.4",
 		"yjs": "^13.6.29"
 	},
 	"devDependencies": {
