--- a/canvas/package.json
+++ b/canvas/package.json
@@ -8,7 +8,7 @@
 		"check": "biome check --write .",
 		"format": "biome format --write .",
 		"check-types": "turbo run check-types",
-		"prepare": "husky"
+		"prepare": "cd .. && husky canvas/.husky"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
