--- a/canvas/apps/web/package.json
+++ b/canvas/apps/web/package.json
@@ -11,6 +11,7 @@
 		"check-types": "next typegen && tsc --noEmit"
 	},
 	"dependencies": {
+		"@repo/common": "workspace:*",
 		"@repo/ui": "workspace:*",
 		"@types/uuid": "^11.0.0",
 		"konva": "^10.0.12",
@@ -21,7 +22,8 @@
 		"react-konva": "^19.2.1",
 		"uuid": "^13.0.0",
 		"y-websocket": "^3.0.0",
-		"yjs": "^13.6.29"
+		"yjs": "^13.6.29",
+		"zustand": "^5.0.0"
 	},
 	"devDependencies": {
 		"@repo/eslint-config": "workspace:*",
