--- a/canvas/apps/ws-backend/package.json
+++ b/canvas/apps/ws-backend/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "ws-backend",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"description": "LekhaFlow WebSocket server for real-time canvas collaboration",
+	"type": "module",
+	"main": "dist/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc -b",
 		"start": "node ./dist/index.js",
-		"dev": "npm run build && npm run start"
+		"dev": "npm run build && npm run start",
+		"clean": "rm -rf dist .turbo"
 	},
 	"dependencies": {
 		"ws": "^8.19.0",
@@ -16,9 +17,10 @@
 	},
 	"devDependencies": {
 		"@repo/typescript-config": "workspace:*",
-		"@types/ws": "^8.18.1"
+		"@types/ws": "^8.18.1",
+		"@types/node": "^22.15.3"
 	},
-	"keywords": [],
+	"keywords": ["websocket", "collaboration", "yjs", "crdt"],
 	"author": "",
 	"license": "ISC"
 }
