--- a/canvas/apps/ws-backend/package.json
+++ b/canvas/apps/ws-backend/package.json
@@ -1,34 +1,24 @@
 {
 	"name": "ws-backend",
 	"version": "1.0.0",
-	"description": "LekhaFlow WebSocket server for real-time canvas collaboration",
-	"type": "module",
-	"main": "dist/index.js",
+	"description": "",
+	"main": "index.js",
 	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc -b",
 		"start": "node ./dist/index.js",
-		"dev": "npm run build && npm run start",
-		"clean": "rm -rf dist .turbo"
+		"dev": "npm run build && npm run start"
 	},
 	"dependencies": {
-		"@hocuspocus/server": "^2.14.0",
-		"@hocuspocus/extension-logger": "^2.14.0",
-		"@hocuspocus/extension-database": "^2.14.0",
-		"@supabase/supabase-js": "^2.47.0",
-		"@repo/config": "workspace:*",
-		"dotenv": "^17.2.3",
+		"ws": "^8.19.0",
+		"y-websocket": "1.5.4",
 		"yjs": "^13.6.29"
 	},
 	"devDependencies": {
 		"@repo/typescript-config": "workspace:*",
-		"@types/node": "^22.15.3"
+		"@types/ws": "^8.18.1"
 	},
-	"keywords": [
-		"websocket",
-		"collaboration",
-		"yjs",
-		"crdt"
-	],
+	"keywords": [],
 	"author": "",
 	"license": "ISC"
 }
