--- a/canvas/apps/http-backend/package.json
+++ b/canvas/apps/http-backend/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "vitest",
 		"build": "tsc -b",
 		"start": "node ./dist/index.js",
 		"dev": "npm run build && npm run start"
@@ -18,14 +18,17 @@
 		"zod": "^4.3.5"
 	},
 	"devDependencies": {
+		"@repo/common": "workspace:*",
+		"@repo/config": "workspace:*",
 		"@repo/http-core": "workspace:*",
 		"@repo/supabase": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
-		"@repo/config": "workspace:*",
 		"@supabase/supabase-js": "^2.90.1",
-		"@repo/common": "workspace:*",
 		"@types/express": "^5.0.6",
-		"tsx": "^4.21.0"
+		"@types/supertest": "^6.0.3",
+		"supertest": "^7.2.2",
+		"tsx": "^4.21.0",
+		"vitest": "^4.0.18"
 	},
 	"keywords": [],
 	"author": "",
