feat(fx): add Three.js Antigravity particle background
- Create Antigravity component with dynamic import (no SSR)
- Implement particle field with configurable color and opacity
- Add @react-three/fiber and three.js dependencies
- Transparent canvas overlay for seamless background integration
- Used in login page (60% opacity) and landing hero (30% opacity)

--- a/canvas/apps/web/package.json
+++ b/canvas/apps/web/package.json
@@ -11,10 +11,13 @@
 		"check-types": "next typegen && tsc --noEmit"
 	},
 	"dependencies": {
+		"@fontsource/cal-sans": "^5.2.3",
 		"@hocuspocus/provider": "^2.14.0",
+		"@react-three/fiber": "^9.5.0",
 		"@repo/common": "workspace:*",
 		"@repo/ui": "workspace:*",
 		"@supabase/supabase-js": "^2.47.0",
+		"@types/three": "^0.182.0",
 		"@types/uuid": "^11.0.0",
 		"konva": "^10.0.12",
 		"lucide-react": "^0.562.0",
@@ -22,14 +25,15 @@
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-konva": "^19.2.1",
+		"three": "^0.182.0",
 		"uuid": "^13.0.0",
 		"yjs": "^13.6.29",
 		"zustand": "^5.0.0"
 	},
 	"devDependencies": {
+		"@repo/config": "workspace:*",
 		"@repo/eslint-config": "workspace:*",
 		"@repo/supabase": "workspace:*",
-		"@repo/config": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
 		"@tailwindcss/postcss": "^4.1.18",
 		"@types/node": "^22.15.3",
