--- a/canvas/apps/ws-backend/package.json
+++ b/canvas/apps/ws-backend/package.json
@@ -8,6 +8,7 @@
 		"build": "tsc -b",
 		"start": "node ./dist/index.js",
 		"dev": "npm run build && npm run start",
+		"test": "vitest",
 		"clean": "rm -rf dist .turbo"
 	},
 	"dependencies": {
@@ -21,7 +22,8 @@
 	},
 	"devDependencies": {
 		"@repo/typescript-config": "workspace:*",
-		"@types/node": "^22.15.3"
+		"@types/node": "^22.15.3",
+		"vitest": "^4.0.18"
 	},
 	"keywords": [
 		"websocket",
