--- a/canvas/apps/web/package.json
+++ b/canvas/apps/web/package.json
@@ -8,7 +8,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint --max-warnings 0",
-		"check-types": "next typegen && tsc --noEmit"
+		"check-types": "next typegen && tsc --noEmit",
+		"test": "vitest run",
+		"test:watch": "vitest"
 	},
 	"dependencies": {
 		"@fontsource/cal-sans": "^5.2.3",
@@ -22,6 +24,7 @@
 		"konva": "^10.0.12",
 		"lucide-react": "^0.562.0",
 		"next": "16.1.0",
+		"perfect-freehand": "^1.2.2",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-konva": "^19.2.1",
@@ -43,6 +46,7 @@
 		"eslint": "^9.39.1",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.18",
-		"typescript": "5.9.2"
+		"typescript": "5.9.2",
+		"vitest": "^3.2.4"
 	}
 }
