--- a/canvas/apps/web/package.json
+++ b/canvas/apps/web/package.json
@@ -43,6 +43,8 @@
 		"eslint": "^9.39.1",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.18",
-		"typescript": "5.9.2"
+		"typescript": "5.9.2",
+		"vite-tsconfig-paths": "^6.1.0",
+		"vitest": "^4.0.18"
 	}
 }
