--- a/canvas/apps/web/package.json
+++ b/canvas/apps/web/package.json
@@ -36,11 +36,15 @@
 		"@repo/supabase": "workspace:*",
 		"@repo/typescript-config": "workspace:*",
 		"@tailwindcss/postcss": "^4.1.18",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/react": "^16.3.2",
 		"@types/node": "^22.15.3",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
 		"autoprefixer": "^10.4.23",
 		"eslint": "^9.39.1",
+		"happy-dom": "^20.5.3",
+		"jsdom": "^28.0.0",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.18",
 		"typescript": "5.9.2",
