--- a/canvas/apps/http-backend/package.json
+++ b/canvas/apps/http-backend/package.json
@@ -4,9 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"start": "dotenv -e ../../supabase2.env -- node dist/index.js",
 		"test": "vitest",
 		"build": "tsc -b",
-		"start": "node ./dist/index.js",
 		"dev": "npm run build && npm run start"
 	},
 	"dependencies": {
@@ -26,6 +26,7 @@
 		"@supabase/supabase-js": "^2.90.1",
 		"@types/express": "^5.0.6",
 		"@types/supertest": "^6.0.3",
+		"dotenv-cli": "^11.0.0",
 		"supertest": "^7.2.2",
 		"tsx": "^4.21.0",
 		"vitest": "^4.0.18"
