--- a/canvas/apps/web/package.json
+++ b/canvas/apps/web/package.json
@@ -37,10 +37,13 @@
 		"@repo/typescript-config": "workspace:*",
 		"@tailwindcss/postcss": "^4.1.18",
 		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.4.2",
 		"@testing-library/react": "^16.3.2",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/node": "^22.15.3",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
+		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.23",
 		"eslint": "^9.39.1",
 		"happy-dom": "^20.5.3",
