--- a/canvas/apps/ws-backend/tsconfig.json
+++ b/canvas/apps/ws-backend/tsconfig.json
@@ -2,12 +2,12 @@
 	"extends": "@repo/typescript-config/base.json",
 	"compilerOptions": {
 		"outDir": "./dist",
-		"rootDir": ".",
+		"rootDir": "./src",
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"esModuleInterop": true,
 		"skipLibCheck": true
 	},
-	"include": ["src/**/*", "test/**/*"],
-	"exclude": ["node_modules", "dist"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "dist", "test"]
 }
