chore: update test scripts and improve package configurations
- Changed test command in http-backend and ws-backend to "vitest run" for consistency.
- Updated tsconfig.tsbuildinfo to include new test files for auth and canvas controllers.
- Added scrollbar-hide class to globals.css for better UI control.
- Modified test scripts in common, config, http-core, logger, and supabase packages to provide clearer messaging.
- Enhanced turbo.json to ensure test tasks depend on build completion.

--- a/canvas/packages/supabase/package.json
+++ b/canvas/packages/supabase/package.json
@@ -12,7 +12,7 @@
 	},
 	"scripts": {
 		"build": "tsc -b",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "echo \"No tests yet\"",
 		"update-types": "npx supabase gen types typescript --project-id \"khajsxndtqzfkdnpwqdk\" --schema public > src/types.ts"
 	},
 	"keywords": [],
