--- a/canvas/apps/ws-backend/package.json
+++ b/canvas/apps/ws-backend/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc -b",
 		"start": "node ./dist/index.js",
 		"dev": "npm run build && npm run start",
-		"test": "vitest",
+		"test": "vitest run",
 		"clean": "rm -rf dist .turbo"
 	},
 	"dependencies": {
