--- a/canvas/package.json
+++ b/canvas/package.json
@@ -8,6 +8,7 @@
 		"check": "biome check --write .",
 		"format": "biome format --write .",
 		"check-types": "turbo run check-types",
+		"test": "turbo run test",
 		"prepare": "cd .. && husky canvas/.husky"
 	},
 	"devDependencies": {
