--- a/canvas/packages/common/package.json
+++ b/canvas/packages/common/package.json
@@ -12,7 +12,7 @@
 	},
 	"scripts": {
 		"build": "tsc -b",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"No tests yet\""
 	},
 	"devDependencies": {
 		"@repo/typescript-config": "workspace:*",
