--- a/canvas/packages/config/package.json
+++ b/canvas/packages/config/package.json
@@ -20,7 +20,7 @@
 	},
 	"scripts": {
 		"build": "tsc -b",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"No tests yet\""
 	},
 	"keywords": [],
 	"author": "",
